src/assets/styles/basics/_helpers.scss
// Font Sizes
.fs12 {font-size: rem(12px);}
.fs14 {font-size: rem(14px);}
.fs18 {font-size: rem(18px);}
.fs20 {font-size: rem(20px);}
.fs24 {font-size: rem(24px);}
.fs28 {font-size: rem(28px);}
.fs30 {font-size: rem(30px);}

//Font weight
.fw600 {
    font-weight: 600;
}

//Margin
.mr1 {margin-right: 1em;}

// flex helpers
.flex {

    display: flex;

    >*.full {
        flex: 1;
    }

    &.column {
        flex-direction: column;
    }

    &.justify-center {
        justify-content: center;
    }

    &.align-center {
        align-items: center;
    }

    &.space-between {
        justify-content: space-between;
    }
}

.clean-list {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

.clean-link {
    text-decoration: none;
    color: black;
}

.clean-btn {
    border: none;
    background: none;
    padding: 0;
    margin: 0;
}

.time-stamp {
    color: $clr-txt-sec
}

.cp {
    cursor: pointer;
}

